Fixed spacing on work page

--- a/css/main.css
+++ b/css/main.css
@@ -533,7 +533,6 @@ a:active{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     max-width: 25rem;
 }
 
@@ -541,7 +540,6 @@ a:active{
 .get-in-touch {
     margin-left: 0;
     margin-right: 0;
-    margin-top: 5rem;
     margin-bottom: 2rem;
     overflow-x: hidden;
 }
@@ -1328,7 +1326,7 @@ main .intro-team {
 
     /* Work page */
     .project-preview-page {
-        margin-bottom: 20rem;
+        margin-bottom: 4rem;
     }
 
     /* Index page */
